<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvNameTitle"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currentDate"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toEndOf="@+id/tvViewTitle"
        app:layout_constraintTop_toTopOf="@+id/tvViewTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:paddingStart="10dp"
        android:layout_marginTop="16dp"
        android:maxWidth="200dp"
        android:singleLine="false"
        android:text="@string/name_currency"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvViewTitle" />

    <TextView
        android:id="@+id/tvNominalTitle"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:singleLine="false"
        android:text="@string/nominal"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/tvNameTitle"
        app:layout_constraintTop_toTopOf="@+id/tvNameTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvRateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingStart="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/current_rate_ex"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvNominalTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvNominalTitle"
        app:layout_constraintTop_toTopOf="@+id/tvNominalTitle"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/purple_700"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTitle">

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCurrency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTitle"
        tools:ignore="UnknownId" />
</androidx.constraintlayout.widget.ConstraintLayout>