<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tvNameCurrency"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxWidth="200dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:singleLine="false"
        android:text="@string/name_currency"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/tvNominal"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:singleLine="false"
        android:text="@string/code"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/tvNameCurrency"
        app:layout_constraintTop_toTopOf="@+id/tvNameCurrency"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/current_rate_ex"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/tvNominal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvNominal"
        app:layout_constraintTop_toTopOf="@+id/tvNominal"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/purple_700"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameCurrency">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>